# Alter

./: CMakeLists.txt  README.md
src/: editor.hpp  file.cpp  file.hpp  frame.cpp  gap_buffer.hpp  main.cpp  terminal.cpp  terminal.hpp  tui_editor.cpp
